syntax = "proto3";
package sonrio.sonr.channel;
import "object/object.proto";
option go_package = "github.com/sonr-io/blockchain/x/channel/types";

message ChannelDoc {
    // Label is human-readable name of the channel.
    string label = 1;

    // Description is a human-readable description of the channel.
    string description = 2;

    // Did is the identifier of the channel.
    string did = 4;

    // RegisterdObject is the object that is registered as the payload for the channel.
    sonrio.sonr.object.ObjectDoc registered_object = 5;
}


// ChannelMessage is a message sent to a channel.
message ChannelMessage {
    // Owner is the peer that originated the message.
    string peer_did = 1;

    // Did is the identifier of the channel.
    string did = 2;

    // Data is the data being sent.
    sonrio.sonr.object.ObjectDoc object = 3; // optional

    // Metadata is the metadata associated with the message.
    map<string, string> metadata = 4;
}
